rancher-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rancher-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rancher
  template:
    metadata:
      labels:
        app: rancher
    spec:
      containers:
        - name: rancher
          image: rancher/rancher:latest
          ports:
            - containerPort: 80
